<resources>
    <string name="app_name">Password Safe</string>
    <string name="action_settings">Settings</string>
    <string name="action_reset_pass">Reset Password</string>
    <string name="action_create_pass">Create Password</string>
    <string name="enterNewPass">Enter New Password</string>
    <string name="confirmNewPass">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_create_master">Create Master Password</string>
    <string name="title_activity_create_entry">New Entry</string>
    <string name="action_create_category">New Category</string>
    <string name="username">User</string>
    <string name="enterNewCat">Enter New Category</string>
    <string name="entryName">Name</string>
    <string name="entryUser">Username</string>
    <string name="entryPass">Password</string>
    <string name="removeCat">Remove Category</string>
    <string name="veiwCategory">Veiw Categories</string>
    <string name="editCategories">Edit Categories</string>
    <string name="createNewEntry">Create New Entry</string>
    <string name="manageMasterPassword">Manage Master Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_home">Password Safe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_create_category">Manage Categories</string>
    <string name="title_activity_display_table_items">Entry Names</string>
    <string name="title_activity_create_new_entry">New Entry</string>
    <string name="title_activity_display_item_content">Entry Details</string>
</resources>
