<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/ic_menu_view_entries"
<<<<<<< HEAD
            android:title="View Categories" />
=======
            android:title="@string/veiwCategory" />
>>>>>>> refs/remotes/origin/master
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_menu_edit_categories"
            android:title="@string/editCategories" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_menu_new_entry"
            android:title="@string/createNewEntry" />
        <item
            android:id="@+id/nav_manage_master"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/manageMasterPassword" />
    </group>


</menu>
