<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.justinsimmons.passwordsafe.CreateNewEntry"
    tools:showIn="@layout/activity_create_new_entry">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/entryName"
        android:id="@+id/lblEntryName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/txtEntryName"
        android:backgroundTint="#ffffff"
        android:elevation="1dp"
        android:shadowColor="@color/colorPrimaryDark"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:layout_below="@+id/lblEntryName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/entryUser"
        android:id="@+id/lblEntryUser"
        android:layout_below="@+id/txtEntryName"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/txtEntryUser"
        android:backgroundTint="#ffffff"
        android:elevation="1dp"
        android:shadowColor="@color/colorPrimaryDark"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:layout_below="@+id/lblEntryUser"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/entryPass"
        android:id="@+id/lblEntryPass"
        android:layout_below="@+id/txtEntryUser"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/txtEntryPass"
        android:backgroundTint="#ffffff"
        android:elevation="1dp"
        android:shadowColor="@color/colorPrimaryDark"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:layout_below="@+id/lblEntryPass"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/newEntrySubmit"
        android:background="@drawable/side_nav_bar"
        android:layout_below="@+id/entrySelect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/entrySelect"
        android:elevation="5dp"
        android:theme="@style/AppTheme.NoActionBar.PopupOverlay"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/lblSaveIn"
        android:popupBackground="@color/colorPrimaryAccent"
        android:minWidth="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Save in Category:"
        android:id="@+id/lblSaveIn"
        android:layout_alignTop="@+id/entrySelect"
        android:layout_alignEnd="@+id/lblEntryName"
        android:layout_marginEnd="25dp" />

</RelativeLayout>
